<resources>
    <string name="pandora_app_name">Pandora</string>
    <string name="pandora_app_img_name">图片</string>

    <!-- 数据状态提示语 -->
    <string name="pandora_loading">加载中…</string>
    <string name="pandora_no_data">暂无数据…</string>
    <string name="pandora_load_fail">加载失败，请点击重试…</string>
    <string name="pandora_load_fail_net">网络异常，请点击重试…</string>

    <!-- 加载更多 -->
    <string name="pandora_load_finish_tips">已经全部加载完毕</string>
    <string name="pandora_loading_more_tips">努力为您加载中</string>
    <string name="pandora_load_fail_tips">加载失败，请点击重试</string>

    <!-- 图片预览/选择 -->
    <string name="pandora_picker_public_directory_empty">设置公共目录路径失败</string>
    <string name="pandora_picker_uri_null">照片路径Uri获取失败</string>
    <string name="pandora_picker_loader_unset">您尚未设置图片加载器</string>
    <string name="pandora_preview_imageview_unset">您尚未设置图片预览控件</string>
    <string name="pandora_preview_loader_unset">您尚未设置图片预览器</string>
    <string name="pandora_preview_source_list_empty">图片数据为空</string>
    <string name="pandora_picker_source_list_empty">您没有可以选择的数据</string>
    <string name="pandora_picker_mime_type_empty">您尚未设置手机数据过滤类型</string>
    <string name="pandora_picker_selected_listener_unset">您尚未设置文件选中监听器</string>
    <string name="pandora_picker_suffix_unset">您未传入文件后缀</string>
    <string name="pandora_picker_folder_loading">正在读取图片文件夹</string>
    <string name="pandora_picker_title">文件选择</string>
    <string name="pandora_picker_confirm">确定</string>
    <string name="pandora_picker_confirm_num">确定(%1$s/%2$s)</string>
    <string name="pandora_picker_preview">预览</string>
    <string name="pandora_picker_preview_num">预览(%s)</string>
    <string name="pandora_picker_all_file">所有文件</string>
    <string name="pandora_picker_custom_file">指定文件</string>
    <string name="pandora_picker_max_count_tips">您最多可以选择%s个文件</string>
    <string name="pandora_picker_folder_num">%s项</string>
    <string name="pandora_no_camera">没有系统相机</string>
    <string name="pandora_picker_temp_file_fail">文件创建失败</string>
    <string name="pandora_picker_folder_fail">文件夹创建失败</string>
    <string name="pandora_picker_authority_empty">您尚未配置FileProvider</string>
    <string name="pandora_picker_take_listener_unset">您尚未设置拍照回调监听器</string>
    <string name="pandora_picker_preview_photo_only">仅提供图片预览</string>

    <!-- 搜索标题栏 -->
    <string name="pandora_search_title_hint">请输入查询关键字</string>

    <!-- 采集控件 -->
    <string name="pandora_clt_hint">请填写</string>

    <!-- 输入法 -->
    <string name="pandora_im_collect">采集专用输入法</string>
    <string name="pandora_im_id_card">身份证号</string>
    <string name="pandora_im_car_plate">车牌号</string>
    <string name="pandora_im_common_cert">通用证件</string>
    <string name="pandora_im_delete">删除</string>
    <string name="pandora_im_complete">完成</string>
    <string name="pandora_im_abc">ABC</string>
    <string name="pandora_im_chinese">中文</string>
    <string name="pandora_im_shift">Shift</string>
    <string name="pandora_im_go_setting_title">采集专用键盘启用提醒</string>
    <string name="pandora_im_go_setting_message">该输入框支持采集专用键盘输入，请先到设置页面启用该键盘</string>
    <string name="pandora_im_go">前往</string>
    <string name="pandora_im_cancel">取消</string>

</resources>
