<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/pdr_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pdr_top_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/pdr_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/pandora_app_img_name"
            android:padding="10dp" />

        <TextView
            android:id="@+id/pdr_title_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/pdr_confirm_btn"
            android:layout_toEndOf="@+id/pdr_back_btn"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/pandora_picker_title"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/pdr_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_green_dark"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/pandora_picker_confirm"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pdr_picker_photot_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/pdr_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/pdr_folder_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tool:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/pdr_folder_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="@string/pandora_picker_all_file"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/pdr_more_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/pandora_app_img_name" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/pdr_preview_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/pandora_picker_preview"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tool:ignore="RelativeOverlap" />

    </LinearLayout>
</LinearLayout>